# db2st-mcp

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.claude/skills/sync-domain/: SKILL.md
.claude/skills/verify-docs/: SKILL.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/codeql/: config.yml
.github/workflows/: ci.yml  e2e.yml  release.yml  security.yml
deploy/: Dockerfile  func.yaml  knative-serving.yaml
docs/: AUTH.md  E2E-REPORT.md  KNATIVE.md  ROADMAP.md  TESTING.md  UPSTREAM.md
scripts/: example_call.py  loadtest.k6.js  local-cluster.sh  retest_refs.py  sync_domain.py  verify_docs.py
src/db2st_mcp/: __init__.py  __main__.py
src/db2st_mcp/apps/: __init__.py
src/db2st_mcp/apps/server/: APP.md  __init__.py  cli.py  dependencies.py  main.py  mcp_app.py  middleware.py
src/db2st_mcp/domains/: __init__.py
src/db2st_mcp/domains/auth/: DOMAIN.md  __init__.py
src/db2st_mcp/domains/auth/server/: __init__.py  middleware.py  store.py  upstash_store.py
src/db2st_mcp/domains/auth/shared/: __init__.py  protocols.py  schemas.py
src/db2st_mcp/domains/tracking/: DOMAIN.md  __init__.py
src/db2st_mcp/domains/tracking/server/: __init__.py  html_fallback.py  parser.py  schenker_client.py  service.py  tool.py
src/db2st_mcp/domains/tracking/shared/: __init__.py  schemas.py
src/db2st_mcp/shared/: __init__.py  cache.py  circuit_breaker.py  config.py  drift.py  errors.py  http.py  logging.py  observability.py  upstash_cache.py
tests/: conftest.py
tests/e2e/: conftest.py  test_http_serve.py  test_mcp_allowed_hosts.py  test_mcp_stdio.py  test_smoke.py  test_stdio_stdout_clean.py
tests/integration/: test_real_upstream.py
tests/unit/: test_app_smoke.py  test_cli.py  test_example_call.py  test_main_module.py  test_sync_domain.py  test_verify_docs.py
tests/unit/apps/server/: test_dependencies.py  test_http_transport.py  test_mcp_app.py  test_request_id_middleware.py  test_transport_security.py
tests/unit/domains/auth/server/: test_middleware.py  test_store_in_memory.py  test_upstash_store.py
tests/unit/domains/tracking/server/: test_html_fallback.py  test_parser.py  test_parser_helpers.py  test_schenker_client.py  test_schenker_client_base_url.py  test_service.py  test_tool_stub.py
tests/unit/shared/: test_cache.py  test_circuit_breaker.py  test_drift.py  test_errors.py  test_http.py  test_logging.py  test_observability.py  test_upstash_cache.py
